--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet">
     <script src="assets/modernizr.js"></script>
   </head>
@@ -22,10 +24,12 @@
     <div class="row">
         <div class="col-md-3 col-sm-6">
             <div class="services">
-                <div class="service-wrap">    
-                    <i class="pe-7s-science pe-dj pe-va"></i>
+                <div class="service-wrap"> 
+                	<div style="font-size: 3em">   
+                    <i class="fab fa-connectdevelop"></i>
+                </div>
                     <h3>Web Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                    <p>Web development is the coding or programming that enables website functionality, per the owner's requirements.</p>
                 </div>
             </div>
             
@@ -33,27 +37,33 @@
         <div class="col-md-3 col-sm-6">
             <div class="services">
                 <div class="service-wrap">
-                    <i class="pe-7s-monitor pe-dj pe-va"></i>
+                	<div style="font-size: 4em">
+                    <i class="fas fa-tv"></i>
+                	</div>
                     <h3>Brand Identity</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                    <p>Beyond saving it money on promotion, a company's brand can be one of its most valuable assets.</p>
                 </div>
             </div>
         </div>
         <div class="col-md-3 col-sm-6">
             <div class="services">
                 <div class="service-wrap">
-                    <i class="pe-7s-edit pe-dj pe-va"></i>
+                	<div style="font-size: 3em">
+                    <i class="fas fa-mobile"></i>
+                	</div>
                     <h3>UI/UX Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                    <p>Web design governs everything involved with the visual aesthetics and usability of a website—color scheme, layout, information flow, and everything else related to the visual aspects</p>
                 </div>
             </div>
         </div>
         <div class="col-md-3 col-sm-6">
             <div class="services">
                 <div class="service-wrap">
-                    <i class="pe-7s-config pe-dj pe-va"></i>
+                	<div style="font-size: 4em">
+                    <i class="fas fa-camera-retro"></i>
+                	</div>
                     <h3>eCommerce Soultion</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, commodi.</p>
+                    <p>Online storefront snd shopping cart integrated directly into your website. I make your site the best ecommerce website on the internet, enhancing your brand and digital presence.</p>
                 </div>
             </div>
         </div>
@@ -69,7 +79,7 @@
     <div class="row port cs-style-3">
         <div class="col-md-4 col-sm-6 col-xs-12 item-space">
             <figure>
-                <%= image_tag('pic.png', class: 'background-image', alt:'Background')%>
+                <%= image_tag('f.png', class: 'background-image', alt:'Background')%>
                 <figcaption>
                     <h3>Settings</h3>
                     <span>Jacob Cummings</span>
@@ -79,7 +89,7 @@
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12 item-space">
             <figure>
-                <%= image_tag('5.png', class: 'background-image', alt:'Background')%>
+                <%= image_tag('e.png', class: 'background-image', alt:'Background')%>
                 <figcaption>
                     <h3>Camera</h3>
                     <span>Jacob Cummings</span>
@@ -89,7 +99,7 @@
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12 item-space">
             <figure>
-                <%= image_tag('4.png', class: 'background-image', alt:'Background')%>
+                <%= image_tag('d.png', class: 'background-image', alt:'Background')%>
                 <figcaption>
                     <h3>Music</h3>
                     <span>Jacob Cummings</span>
@@ -99,7 +109,7 @@
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12 item-space">
             <figure>
-                <%= image_tag('3.png', class: 'background-image', alt:'Background')%>
+                <%= image_tag('c.png', class: 'background-image', alt:'Background')%>
                 <figcaption>
                     <h3>Settings</h3>
                     <span>Jacob Cummings</span>
@@ -109,7 +119,7 @@
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12 item-space">
             <figure>
-                <%= image_tag('2.png', class: 'background-image', alt:'Background')%>
+                <%= image_tag('b.png', class: 'background-image', alt:'Background')%>
                 <figcaption>
                     <h3>Camera</h3>
                     <span>Jacob Cummings</span>
@@ -119,7 +129,7 @@
         </div>
         <div class="col-md-4 col-sm-6 col-xs-12 item-space">
             <figure>
-                <%= image_tag('1.png', class: 'background-image', alt:'Background')%>
+                <%= image_tag('a.png', class: 'background-image', alt:'Background')%>
                 <figcaption>
                     <h3>Music</h3>
                     <span>Jacob Cummings</span>
@@ -203,7 +213,7 @@ My passion for designing useful and appealing software is what drives me to purs
                 </div>
             </div>
             <div class="col-sm-6">
-                <h2 class="con-title">Drop us a line</h2>
+                <h2 class="con-title">Drop me a line</h2>
                 <form role="form">
                   <div class="form-group">
                     <input type="text" class="form-control" id="user_name" placeholder="Enter your name">
@@ -227,11 +237,11 @@ My passion for designing useful and appealing software is what drives me to purs
             <div class="col-xs-12">
                 <ul class="scoialinks">
                     <li class="normal-txt">Find me on</li>
-                    <li class="social-icons"><a class="facebook" href="#"></a></li>
-                    <li class="social-icons"><a class="twitter" href="#"></a></li>
-                    <li class="social-icons"><a class="linkedin" href="#"></a></li>
-                    <li class="social-icons"><a class="google-plus" href="#"></a></li>
-                    <li class="social-icons"><a class="wordpress" href="#"></a></li>
+                    <li class="social-icons"><a class="facebook" href="https://www.facebook.com/profile.php?id=100010672849254"></a></li>
+                    <li class="social-icons"><a class="twitter" href="https://twitter.com/Darrennn_B"></a></li>
+                    <li class="social-icons"><a class="linkedin" href="https://www.linkedin.com/in/darren-booker-b1b9b515b/"></a></li>
+                   
+                    
                 </ul>
             </div>
         </div>
@@ -245,7 +255,7 @@ My passion for designing useful and appealing software is what drives me to purs
 
 		<script src="assets/jquery-2.1.3.min.js"></script>
         <script src="assets/bootstrap.min.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+        
         <script src="assets/jquery.actual.min.js"></script>
         <script src="assets/smooth-scroll.js"></script>
         <script src="assets/owl.carousel.js"></script>
